basic banner almost done

--- a/Website/index.html
+++ b/Website/index.html
@@ -16,12 +16,13 @@
         <section id="banner">
 
             <!--title-->
-            <div>
-                <h1><a href="index.html">My Website</a></h1>
+            <div class="titlecontainer">
+                <!-- <h1><a href="index.html">My Website</a></h1> -->
+                <h1>My Website</h1>
             </div>
 
             <!--nav options-->
-            <div>
+            <div class="navcontainer">
                 <nav>
                     <a href="index.html">Main Page</a>
                     <a href="page1.html">1st Page</a>
