--- a/Website/index.html
+++ b/Website/index.html
@@ -15,13 +15,10 @@
         <!--Banner Section-->
         <section id="banner">
 
-            <!--title-->
             <div class="titlecontainer">
-                <!-- <h1><a href="index.html">My Website</a></h1> -->
-                <h1>My Website</h1>
+                <h1><a href="index.html">My Website</a></h1>
             </div>
 
-            <!--nav options-->
             <div class="navcontainer">
                 <nav>
                     <a href="index.html">Main Page</a>
