--- a/Website/index.html
+++ b/Website/index.html
@@ -3,6 +3,8 @@
 <!--Page Wrapper div-->
 <div id="wrapper">
 
+    <!--HEAD-->
+
     <head>
         <title>My Website</title>
         <meta charset="utf-8" />
@@ -11,7 +13,10 @@
 
     </head>
 
+    <!--BODY-->
+
     <body>
+
         <!--Banner Section-->
         <section id="banner">
 
@@ -26,10 +31,20 @@
                     <a href="page2.html">2nd Page</a>
                     <a href="page3.html">3rd Page</a>
                 </nav>
-            </section>
+        </section>
+        
+        <!--Content Section #1-->
+        <section id="contentSect1">
 
-        </div>
+            <div class="imgContainer">
+                <img src="computer_cat.png" alt="Cat Not Fund! :(" >
+            </div>
 
+            <div>
+
+            </div>
+
+        </section>
 
     </body>
 
