Added text to go with img, but text not ready for mobile

--- a/Website/index.html
+++ b/Website/index.html
@@ -32,16 +32,25 @@
                     <a href="page3.html">3rd Page</a>
                 </nav>
         </section>
-        
+
         <!--Content Section #1-->
         <section id="contentSect1">
 
+            <!--Computer Cat-->
             <div class="imgContainer">
-                <img src="computer_cat.png" alt="Cat Not Fund! :(" >
+                <img src="computer_cat.png" alt="Cat Not Fund! :(">
             </div>
+            <!--Text Box-->
 
-            <div>
-
+            <div id="txtContainer">
+                <!--title-->
+                <h1>Computer Cat</h1>
+                <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste quia explicabo distinctio commodi
+                    nulla dolores officia blanditiis architecto odit voluptatibus, nesciunt laboriosam ipsam modi eaque
+                    voluptates facilis ducimus aliquid numquam earum, hic, adipisci voluptatem ullam ex ratione? Earum,
+                    perspiciatis laudantium distinctio rerum quod nisi quae! Perferendis sint inventore cumque
+                    recusandae obcaecati, laborum neque mollitia at doloremque dolor! Enim debitis, dicta deleniti, a,
+                    amet obcaecati minus tempore voluptate facilis dolore doloribus. Explicabo et a quaerat rerum?</h2>
             </div>
 
         </section>
