ready for presentation

--- a/Website/index.html
+++ b/Website/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <!--Text Box-->
-            <div id="txtContainer">
+            <div class="txtContainer">
                 <!--title-->
                 <h1>Computer Cat</h1>
                 <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste quia explicabo distinctio commodi
