fixed file structure

--- a/Website/index.html
+++ b/Website/index.html
@@ -38,7 +38,7 @@
 
             <!--Computer Cat-->
             <div class="imgContainer">
-                <img src="computer_cat.png" alt="Cat Not Fund! :(">
+                <img src="./assets/css/images/computer_cat.png" alt="Cat Not Fund! :(">
             </div>
 
             <!--Text Box-->
